# CouchGaming

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  README.md  eslint.config.mjs  package.json  tsconfig.json
.github/workflows/: release.yml
helper/couchgaming-display/: Cargo.toml
helper/couchgaming-display/src/: main.rs
scripts/: build-helper.ts  build.ts  fetch-tools.ts
src/: daemon.ts  exe-import.d.ts  main.ts  session.ts
src/audio-manager/: index.ts
src/autostart/: install.ts
src/config/: paths.ts  schema.ts  store.ts
src/display-manager/: index.ts
src/logger/: index.ts
src/session/: find-steam-pid.ts  wait-steam-exit.ts
src/shortcut/: install.ts
src/state-machine/: index.ts
src/steam-watcher/: index.ts  registry.ts  windows.ts
src/tool-runner/: csv.ts  index.ts
src/tools-bootstrap/: index.ts  manifest.ts
src/wizard/: capture-gaming-cfg.ts  index.ts
