[package]
name = "couchgaming-display"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "couchgaming-display"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
  "Win32_Devices_Display",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
]
